# plantlog

./: README.md  docker-compose.yml  pyproject.toml
services/backend/: Dockerfile  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 16168eab777e_create_initial_tables.py  8abd5a9c918a_create_initial_tables.py  ebc9c4c814ee_create_inital_tables.py
services/backend/src/: main.py  schemas.py
services/backend/src/db/: database.py  models.py
services/frontend/: package-lock.json
services/frontend/src/: main.js
services/frontend/src/components/: HelloWorld.vue
